Author route parameter definitions
